output.txt
main.c: In function ‘main’:
main.c:17:2: error: unknown type name ‘pthread_t’
  pthread_t tid;
  ^~~~~~~~~
main.c:18:2: warning: implicit declaration of function ‘signal’ [-Wimplicit-function-declaration]
  signal(SIGINT,sig_handler);
  ^~~~~~
main.c:18:9: error: ‘SIGINT’ undeclared (first use in this function)
  signal(SIGINT,sig_handler);
         ^~~~~~
main.c:18:9: note: each undeclared identifier is reported only once for each function it appears in
main.c:20:2: warning: implicit declaration of function ‘pthread_create’ [-Wimplicit-function-declaration]
  pthread_create(&tid,NULL,func,NULL);
  ^~~~~~~~~~~~~~
main.c:21:2: warning: implicit declaration of function ‘sleep’ [-Wimplicit-function-declaration]
  sleep(1);
  ^~~~~
